--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@medplum/core": "3.2.31",
     "@medplum/react": "3.2.31",
     "@next/bundle-analyzer": "15.1.6",
+    "@tabler/icons-react": "^3.30.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "18.2.0",
